# pyproject.toml
[project]
name = "dreamweaver"
version = "0.1.0"
description = "DreamWeaver application using Gemini API"
# Add to pyproject.toml
dependencies = [
    "flask>=2.0.0",
    "google-genai",
    "werkzeug>=2.0.0",
    "python-dotenv>=1.0.0",
    "Pillow>=9.0.0",
    "requests",
    "webdavclient3",
    "qrcode"
]